Add API Documentation to /clinic
